--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,13 @@ scipy = "^1.5.2"
 scikit-learn = "^0.23.2"
 matplotlib = "^3.3.2"
 seaborn = "^0.11.0"
-tensorflow = "^2.3.1"
+numpy = "1.18.0"
+tensorflow = "2.3.1"
 keras = "^2.4.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pre-commit = "^2.7.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
