--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ seaborn = "^0.11.0"
 numpy = "1.18.0"
 tensorflow = "2.3.1"
 keras = "^2.4.3"
+nltk = "^3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
