--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ nltk = "^3.5"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pre-commit = "^2.7.1"
+pytest-cov = "^2.10.1"
+black = "^20.8b1"
+mypy = "^0.782"
+isort = "^5.5.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
