--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
         name: Checkout code
         with:
-          fetch-dept: 50
+          fetch-depth: 50
 
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
