--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ numpy = "1.18.0"
 tensorflow = "2.3.1"
 keras = "^2.4.3"
 nltk = "^3.5"
+ipykernel = "^5.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
