--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore contents of data/ and embeddings/ folders
+data/*
+!data/.gitkeep
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
