Add embeddings directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Ignore contents of data/ and embeddings/ folders
+# Ignore contents of resource directories
 data/*
 !data/.gitkeep
+embeddings/*
+!embeddings/.gitkeep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
