--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ ipykernel = "^5.3.4"
 gensim = "^3.8.3"
 wikipedia2vec = "^1.0.4"
 pyemd = "^0.5.1"
+dask = {extras = ["complete"], version = "^2.30.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
