Rerun notebooks and consolidate directories (#13)
* Add data folder for consistency

* Add embeddings directory

* Rerun and consolidate notebooks

* Add Dask

* Consolidate notebooks

* Fix relative imports

* Add demos directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Ignore contents of resource directories
+data/*
+!data/.gitkeep
+embeddings/*
+!embeddings/.gitkeep
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
