--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ line_length=120                # corresponds to -w  flag
 multi_line_output=3            # corresponds to -m  flag
 include_trailing_comma=true    # corresponds to -tc flag
 skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
-known_third_party = ["numpy", "pandas"]
+known_third_party = ["numpy", "pandas", "pytest"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
